// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultBlockAppender should append a default block when input focused 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <WithSelect(WithDispatch(BlockDropZone)) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onKeyDown={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    readOnly={true}
    role="button"
    type="text"
    value="Write your story"
  />
  <WithSelect(WithDispatch(InserterWithShortcuts)) />
  <WithSelect(WithDispatch(Inserter))
    position="top right"
  >
    <WithSelect(WithDispatch(DotTip))
      id="core/editor.inserter"
    >
      Welcome to the wonderful world of blocks! Click ‘Add block’ to insert different kinds of content—text, images, quotes, video, lists, and much more.
    </WithSelect(WithDispatch(DotTip))>
  </WithSelect(WithDispatch(Inserter))>
</div>
`;

exports[`DefaultBlockAppender should match snapshot 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <WithSelect(WithDispatch(BlockDropZone)) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={[MockFunction]}
    onFocus={[MockFunction]}
    onKeyDown={[MockFunction]}
    readOnly={true}
    role="button"
    type="text"
    value="Write your story"
  />
  <WithSelect(WithDispatch(InserterWithShortcuts)) />
  <WithSelect(WithDispatch(Inserter))
    position="top right"
  >
    <WithSelect(WithDispatch(DotTip))
      id="core/editor.inserter"
    >
      Welcome to the wonderful world of blocks! Click ‘Add block’ to insert different kinds of content—text, images, quotes, video, lists, and much more.
    </WithSelect(WithDispatch(DotTip))>
  </WithSelect(WithDispatch(Inserter))>
</div>
`;

exports[`DefaultBlockAppender should optionally show without prompt 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <WithSelect(WithDispatch(BlockDropZone)) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={[MockFunction]}
    onFocus={[MockFunction]}
    onKeyDown={[MockFunction]}
    readOnly={true}
    role="button"
    type="text"
    value=""
  />
  <WithSelect(WithDispatch(InserterWithShortcuts)) />
  <WithSelect(WithDispatch(Inserter))
    position="top right"
  >
    <WithSelect(WithDispatch(DotTip))
      id="core/editor.inserter"
    >
      Welcome to the wonderful world of blocks! Click ‘Add block’ to insert different kinds of content—text, images, quotes, video, lists, and much more.
    </WithSelect(WithDispatch(DotTip))>
  </WithSelect(WithDispatch(Inserter))>
</div>
`;
